--- a/build.xml
+++ b/build.xml
@@ -3,10 +3,12 @@
 	<property file="build.properties"/>
 	
 	<target name="zipit">
+		<delete verbose="true" file="plugin.video.vodie.zip"></delete>
 		<zip destfile="plugin.video.vodie.zip" basedir="." excludes="build.*" />
 	</target>
 	
 	<target name="cleanXBMC">
+		<delete verbose="true" file="plugin.video.vodie.zip"></delete>
 		<delete verbose="true" dir="${XBMC_HOME}/addons/plugin.video.vodie"></delete>
 		<delete verbose="true" dir="${XBMC_HOME}/userdata/addon_data/plugin.video.vodie"></delete>
 	</target>
