--- a/plugin.video.vodie/build.properties
+++ b/plugin.video.vodie/build.properties
@@ -1,3 +1,7 @@
 dist=bin
 
 XBMC_HOME=/Users/Alexis/Library/Application Support/XBMC
+
+VERSION=1.0.0
+
+ZIP_FILENAME=plugin.video.vodie-${VERSION}.zip
